Remove jupyter-dash from docs and test notebooks

--- a/notebooks/test_alert.ipynb
+++ b/notebooks/test_alert.ipynb
@@ -2,19 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dash import html, dcc, Input, Output, State\n",
-    "import jupyter_dash\n",
+    "from dash import html, dcc, Input, Output, State, Dash\n",
     "\n",
     "import dash_material_components as dmc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +57,7 @@
    "source": [
     "# Dash app\n",
     "\n",
-    "app = jupyter_dash.JupyterDash(__name__)\n",
+    "app = Dash(__name__)\n",
     "app.layout = layout\n",
     "\n",
     "@app.callback(\n",
