--- a/notebooks/test_download.ipynb
+++ b/notebooks/test_download.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "everyday-remainder",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dash import dcc, Input, Output\n",
-    "import jupyter_dash\n",
+    "from dash import dcc, Input, Output, Dash\n",
+    "\n",
     "\n",
     "import dash_material_components as dmc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "subjective-secondary",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,14 +67,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "novel-gates",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://0.0.0.0:8001/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x2d712afd0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Dash app\n",
     "\n",
-    "app = jupyter_dash.JupyterDash(__name__)\n",
+    "app = Dash(__name__)\n",
     "app.layout = layout\n",
     "\n",
     "@app.callback(\n",
