--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -2,20 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "id": "substantial-ghana",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jupyter_dash import JupyterDash\n",
-    "from dash import Input, Output\n",
-    "\n",
+    "from dash import Input, Output, Dash\n",
     "import dash_material_components as dmc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "id": "floral-upgrade",
    "metadata": {},
    "outputs": [],
@@ -39,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "id": "documented-raise",
    "metadata": {},
    "outputs": [],
@@ -66,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "id": "2a900805",
    "metadata": {},
    "outputs": [],
@@ -93,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "id": "b43ef36b-4e3e-4667-b8ee-262e98db2d0d",
    "metadata": {},
    "outputs": [],
@@ -177,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "id": "2091a0c4",
    "metadata": {},
    "outputs": [],
@@ -233,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "id": "2d08930d",
    "metadata": {},
    "outputs": [],
@@ -290,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "id": "ef526880",
    "metadata": {},
    "outputs": [],
@@ -361,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "id": "pleased-invasion",
    "metadata": {},
    "outputs": [],
@@ -394,14 +392,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "extra-kenya",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://0.0.0.0:8001/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x2d6330d50>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Dash app\n",
     "\n",
-    "app = JupyterDash(__name__)\n",
+    "app = Dash(__name__)\n",
     "app.layout = layout\n",
     "\n",
     "\n",
