--- a/notebooks/test_sidebar.ipynb
+++ b/notebooks/test_sidebar.ipynb
@@ -2,20 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "congressional-chile",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jupyter_dash import JupyterDash\n",
-    "from dash import Input, Output\n",
+    "from dash import Input, Output, Dash\n",
     "\n",
     "import dash_material_components as dmc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "annual-interview",
    "metadata": {},
    "outputs": [],
@@ -95,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,14 +113,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "earned-particle",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://0.0.0.0:8001/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x2d67944d0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Dash app\n",
     "\n",
-    "app = JupyterDash(__name__)\n",
+    "app = Dash(__name__)\n",
     "app.layout = layout\n",
     "\n",
     "\n",
