--- a/notebooks/test_tab.ipynb
+++ b/notebooks/test_tab.ipynb
@@ -1,205 +1,226 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "great-steam",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from jupyter_dash import JupyterDash\n",
-    "from dash import html, Input, Output\n",
-    "\n",
-    "import dash_material_components as dmc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "86602fb0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = [\n",
-    "    {\"name\": \"John\"},\n",
-    "    {\"name\": \"Paul\"},\n",
-    "    {\"name\": \"George\"},\n",
-    "    {\"name\": \"Ringo\"},\n",
-    "    {\"name\": \"Brian\"},\n",
-    "    {\"name\": \"Pete\"},\n",
-    "    {\"name\": \"Stuart\"},\n",
-    "    {\"name\": \"George\"},\n",
-    "    {\"name\": \"Neil\"},\n",
-    "    {\"name\": \"Mal\"},\n",
-    "    {\"name\": \"Jim\"},\n",
-    "    {\"name\": \"Derek\"},\n",
-    "    {\"name\": \"Geoff\"},\n",
-    "    {\"name\": \"Andy\"},\n",
-    "    {\"name\": \"Tony\"},\n",
-    "    {\"name\": \"Julia\"},\n",
-    "    {\"name\": \"Astrid\"},\n",
-    "    {\"name\": \"Klaus\"},\n",
-    "    {\"name\": \"Yoko\"},\n",
-    "    {\"name\": \"Billy\"},\n",
-    "    {\"name\": \"Eric\"},\n",
-    "    {\"name\": \"Ginger\"},\n",
-    "    {\"name\": \"Jack\"},\n",
-    "    {\"name\": \"Keith\"},\n",
-    "    {\"name\": \"Mick\"},\n",
-    "    {\"name\": \"Charlie\"},\n",
-    "    {\"name\": \"Ronnie\"},\n",
-    "    {\"name\": \"Bill\"},\n",
-    "    {\"name\": \"Ian\"},\n",
-    "    {\"name\": \"John\"},\n",
-    "    {\"name\": \"Paul\"},\n",
-    "    {\"name\": \"George\"},\n",
-    "    {\"name\": \"Ringo\"},\n",
-    "    {\"name\": \"Brian\"},\n",
-    "    {\"name\": \"Pete\"},\n",
-    "    {\"name\": \"Stuart\"},\n",
-    "    {\"name\": \"George\"},\n",
-    "    {\"name\": \"Neil\"},\n",
-    "    {\"name\": \"Mal\"},\n",
-    "    {\"name\": \"Jim\"},\n",
-    "    {\"name\": \"Derek\"},\n",
-    "    {\"name\": \"Geoff\"},\n",
-    "    {\"name\": \"Andy\"},\n",
-    "    {\"name\": \"Tony\"},\n",
-    "    {\"name\": \"Julia\"},\n",
-    "    {\"name\": \"Astrid\"},\n",
-    "    {\"name\": \"Klaus\"},\n",
-    "    {\"name\": \"Yoko\"},\n",
-    "    {\"name\": \"Billy\"},\n",
-    "    {\"name\": \"Eric\"},\n",
-    "    {\"name\": \"Ginger\"},\n",
-    "    {\"name\": \"Jack\"},\n",
-    "    {\"name\": \"Keith\"},\n",
-    "    {\"name\": \"Mick\"},\n",
-    "    {\"name\": \"Charlie\"},\n",
-    "    {\"name\": \"Ronnie\"},\n",
-    "    {\"name\": \"Bill\"},\n",
-    "    {\"name\": \"Ian\"},\n",
-    "    {\"name\": \"John\"},\n",
-    "    {\"name\": \"Paul\"},\n",
-    "    {\"name\": \"George\"},\n",
-    "    {\"name\": \"Ringo\"},\n",
-    "    {\"name\": \"Brian\"},\n",
-    "    {\"name\": \"Pete\"},\n",
-    "    {\"name\": \"Stuart\"},\n",
-    "    {\"name\": \"George\"},\n",
-    "    {\"name\": \"Neil\"},\n",
-    "    {\"name\": \"Mal\"},\n",
-    "    {\"name\": \"Jim\"},\n",
-    "    {\"name\": \"Derek\"},\n",
-    "    {\"name\": \"Geoff\"},\n",
-    "    {\"name\": \"Andy\"},\n",
-    "]\n",
-    "\n",
-    "table = dmc.Table( \n",
-    "    columns=[\"name\"],\n",
-    "    rows=data,\n",
-    "    rowsPerPageOptions=[25, 50, 100],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "hindu-script",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test tab\n",
-    "\n",
-    "button = html.Button(\"Show error page\", id=\"button\", n_clicks=0)\n",
-    "\n",
-    "text = dmc.Typography(text=\"Content...\", component=\"p\", variant=\"body2\")\n",
-    "text_2 = dmc.Typography(text=\"Other content...\", component=\"p\", variant=\"body2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "a76308eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dasboard layout\n",
-    "\n",
-    "section_1 = dmc.Section(\n",
-    "    id=\"section-1\",\n",
-    "    orientation=\"rows\",\n",
-    "    children=[text, text_2, button],\n",
-    "    cards=[{\"title\": \"Card 1a\", \"size\": 3}, {\"title\": \"Card 1b\"}, {\"title\": \"Card 1c\"}]\n",
-    ")\n",
-    "tab = dmc.Tab(\n",
-    "    children=[table, text_2, dmc.Box(sx={\"height\": \"inherit\", \"width\": \"inherit\", \"backgroundColor\": \"red\"})],\n",
-    "    tabs=[{\"label\": \"2a\"}, {\"label\": \"2b\"}, {\"label\": \"RED!\"}]\n",
-    ")\n",
-    "section_2 = dmc.Section(\n",
-    "    id=\"section-2\",\n",
-    "    children=tab,\n",
-    "    cards=[{\"title\": \"Card 2\"}]\n",
-    ")\n",
-    "\n",
-    "page = dmc.Page(id=\"page\", orientation=\"columns\", children=[section_1, section_2])\n",
-    "navbar = dmc.NavBar(title=\"Custom dash\")\n",
-    "\n",
-    "layout = dmc.Dashboard(children=[navbar, page])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "typical-population",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dash app\n",
-    "\n",
-    "app = JupyterDash(__name__)\n",
-    "app.layout = layout\n",
-    "\n",
-    "@app.callback(\n",
-    "    Output(component_id=\"page\", component_property=\"errorStatus\"),\n",
-    "    Output(component_id=\"page\", component_property=\"errorMessage\"),\n",
-    "    Input(component_id=\"button\", component_property=\"n_clicks\"),\n",
-    "    prevent_initial_call=True,\n",
-    ")\n",
-    "def show_error_page(n_clicks):\n",
-    "    return [404, \"Error message\"]\n",
-    "\n",
-    "app.run_server(mode=\"inline\", host=\"0.0.0.0\", port=8001, debug=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "00524167",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+    "cells": [
+        {
+            "cell_type": "code",
+            "execution_count": 1,
+            "id": "great-steam",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "from dash import html, Input, Output, Dash\n",
+                "\n",
+                "import dash_material_components as dmc"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 2,
+            "id": "86602fb0",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "data = [\n",
+                "    {\"name\": \"John\"},\n",
+                "    {\"name\": \"Paul\"},\n",
+                "    {\"name\": \"George\"},\n",
+                "    {\"name\": \"Ringo\"},\n",
+                "    {\"name\": \"Brian\"},\n",
+                "    {\"name\": \"Pete\"},\n",
+                "    {\"name\": \"Stuart\"},\n",
+                "    {\"name\": \"George\"},\n",
+                "    {\"name\": \"Neil\"},\n",
+                "    {\"name\": \"Mal\"},\n",
+                "    {\"name\": \"Jim\"},\n",
+                "    {\"name\": \"Derek\"},\n",
+                "    {\"name\": \"Geoff\"},\n",
+                "    {\"name\": \"Andy\"},\n",
+                "    {\"name\": \"Tony\"},\n",
+                "    {\"name\": \"Julia\"},\n",
+                "    {\"name\": \"Astrid\"},\n",
+                "    {\"name\": \"Klaus\"},\n",
+                "    {\"name\": \"Yoko\"},\n",
+                "    {\"name\": \"Billy\"},\n",
+                "    {\"name\": \"Eric\"},\n",
+                "    {\"name\": \"Ginger\"},\n",
+                "    {\"name\": \"Jack\"},\n",
+                "    {\"name\": \"Keith\"},\n",
+                "    {\"name\": \"Mick\"},\n",
+                "    {\"name\": \"Charlie\"},\n",
+                "    {\"name\": \"Ronnie\"},\n",
+                "    {\"name\": \"Bill\"},\n",
+                "    {\"name\": \"Ian\"},\n",
+                "    {\"name\": \"John\"},\n",
+                "    {\"name\": \"Paul\"},\n",
+                "    {\"name\": \"George\"},\n",
+                "    {\"name\": \"Ringo\"},\n",
+                "    {\"name\": \"Brian\"},\n",
+                "    {\"name\": \"Pete\"},\n",
+                "    {\"name\": \"Stuart\"},\n",
+                "    {\"name\": \"George\"},\n",
+                "    {\"name\": \"Neil\"},\n",
+                "    {\"name\": \"Mal\"},\n",
+                "    {\"name\": \"Jim\"},\n",
+                "    {\"name\": \"Derek\"},\n",
+                "    {\"name\": \"Geoff\"},\n",
+                "    {\"name\": \"Andy\"},\n",
+                "    {\"name\": \"Tony\"},\n",
+                "    {\"name\": \"Julia\"},\n",
+                "    {\"name\": \"Astrid\"},\n",
+                "    {\"name\": \"Klaus\"},\n",
+                "    {\"name\": \"Yoko\"},\n",
+                "    {\"name\": \"Billy\"},\n",
+                "    {\"name\": \"Eric\"},\n",
+                "    {\"name\": \"Ginger\"},\n",
+                "    {\"name\": \"Jack\"},\n",
+                "    {\"name\": \"Keith\"},\n",
+                "    {\"name\": \"Mick\"},\n",
+                "    {\"name\": \"Charlie\"},\n",
+                "    {\"name\": \"Ronnie\"},\n",
+                "    {\"name\": \"Bill\"},\n",
+                "    {\"name\": \"Ian\"},\n",
+                "    {\"name\": \"John\"},\n",
+                "    {\"name\": \"Paul\"},\n",
+                "    {\"name\": \"George\"},\n",
+                "    {\"name\": \"Ringo\"},\n",
+                "    {\"name\": \"Brian\"},\n",
+                "    {\"name\": \"Pete\"},\n",
+                "    {\"name\": \"Stuart\"},\n",
+                "    {\"name\": \"George\"},\n",
+                "    {\"name\": \"Neil\"},\n",
+                "    {\"name\": \"Mal\"},\n",
+                "    {\"name\": \"Jim\"},\n",
+                "    {\"name\": \"Derek\"},\n",
+                "    {\"name\": \"Geoff\"},\n",
+                "    {\"name\": \"Andy\"},\n",
+                "]\n",
+                "\n",
+                "table = dmc.Table( \n",
+                "    columns=[\"name\"],\n",
+                "    rows=data,\n",
+                "    rowsPerPageOptions=[25, 50, 100],\n",
+                ")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 3,
+            "id": "hindu-script",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Test tab\n",
+                "\n",
+                "button = html.Button(\"Show error page\", id=\"button\", n_clicks=0)\n",
+                "\n",
+                "text = dmc.Typography(text=\"Content...\", component=\"p\", variant=\"body2\")\n",
+                "text_2 = dmc.Typography(text=\"Other content...\", component=\"p\", variant=\"body2\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 4,
+            "id": "a76308eb",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Dasboard layout\n",
+                "\n",
+                "section_1 = dmc.Section(\n",
+                "    id=\"section-1\",\n",
+                "    orientation=\"rows\",\n",
+                "    children=[text, text_2, button],\n",
+                "    cards=[{\"title\": \"Card 1a\", \"size\": 3}, {\"title\": \"Card 1b\"}, {\"title\": \"Card 1c\"}]\n",
+                ")\n",
+                "tab = dmc.Tab(\n",
+                "    children=[table, text_2, dmc.Box(sx={\"height\": \"inherit\", \"width\": \"inherit\", \"backgroundColor\": \"red\"})],\n",
+                "    tabs=[{\"label\": \"2a\"}, {\"label\": \"2b\"}, {\"label\": \"RED!\"}]\n",
+                ")\n",
+                "section_2 = dmc.Section(\n",
+                "    id=\"section-2\",\n",
+                "    children=tab,\n",
+                "    cards=[{\"title\": \"Card 2\"}]\n",
+                ")\n",
+                "\n",
+                "page = dmc.Page(id=\"page\", orientation=\"columns\", children=[section_1, section_2])\n",
+                "navbar = dmc.NavBar(title=\"Custom dash\")\n",
+                "\n",
+                "layout = dmc.Dashboard(children=[navbar, page])"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 5,
+            "id": "typical-population",
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/html": [
+                            "\n",
+                            "        <iframe\n",
+                            "            width=\"100%\"\n",
+                            "            height=\"650\"\n",
+                            "            src=\"http://0.0.0.0:8001/\"\n",
+                            "            frameborder=\"0\"\n",
+                            "            allowfullscreen\n",
+                            "            \n",
+                            "        ></iframe>\n",
+                            "        "
+                        ],
+                        "text/plain": [
+                            "<IPython.lib.display.IFrame at 0x2cd733090>"
+                        ]
+                    },
+                    "metadata": {},
+                    "output_type": "display_data"
+                }
+            ],
+            "source": [
+                "# Dash app\n",
+                "\n",
+                "app = Dash(__name__)\n",
+                "app.layout = layout\n",
+                "\n",
+                "@app.callback(\n",
+                "    Output(component_id=\"page\", component_property=\"errorStatus\"),\n",
+                "    Output(component_id=\"page\", component_property=\"errorMessage\"),\n",
+                "    Input(component_id=\"button\", component_property=\"n_clicks\"),\n",
+                "    prevent_initial_call=True,\n",
+                ")\n",
+                "def show_error_page(n_clicks):\n",
+                "    return [404, \"Error message\"]\n",
+                "\n",
+                "app.run_server(mode=\"inline\", host=\"0.0.0.0\", port=8001, debug=False)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "00524167",
+            "metadata": {},
+            "outputs": [],
+            "source": []
+        }
+    ],
+    "metadata": {
+        "kernelspec": {
+            "display_name": "Python 3 (ipykernel)",
+            "language": "python",
+            "name": "python3"
+        },
+        "language_info": {
+            "codemirror_mode": {
+                "name": "ipython",
+                "version": 3
+            },
+            "file_extension": ".py",
+            "mimetype": "text/x-python",
+            "name": "python",
+            "nbconvert_exporter": "python",
+            "pygments_lexer": "ipython3",
+            "version": "3.11.4"
+        }
+    },
+    "nbformat": 4,
+    "nbformat_minor": 5
 }
