Clean test notebook

--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -360,10 +360,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b83c3eb6",
+   "id": "0a98755e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "module_definitions = {\n",
+    "    \"pd\": {\n",
+    "        \"importName\": \"pandas\",\n",
+    "        \"items\": {\n",
+    "            \"DataFrame\": {\n",
+    "                \"type\": \"class\",\n",
+    "                \"info\": \"Two-dimensional, size-mutable, potentially heterogeneous tabular data.\",\n",
+    "                \"returns\": \"pd.DataFrame\",\n",
+    "                \"items\": {\n",
+    "                    \"__init__\": {\n",
+    "                        'type': 'function',\n",
+    "                        'info': 'Initialize self.  See help(type(self)) for accurate signature.',\n",
+    "                        'returns': 'None',\n",
+    "                        'parameters': {\n",
+    "                            'data': '.',\n",
+    "                            'index': 'Axes | None',\n",
+    "                            'columns': 'Axes | None',\n",
+    "                            'dtype': 'Dtype | None',\n",
+    "                            'copy': 'bool | None',\n",
+    "                        }\n",
+    "                    },\n",
+    "                    \"head\": {\n",
+    "                        'type': 'function',\n",
+    "                        'info': 'Return the first `n` rows.',\n",
+    "                        'returns': 'pd.DataFrame',\n",
+    "                        'parameters': {\n",
+    "                            'n': 'int',\n",
+    "                        }\n",
+    "                    }\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
@@ -372,18 +407,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_module_definitions_from_file(file_path: str):\n",
-    "    \"\"\"\n",
-    "    Loads the module definitions from a text file in JSON format.\n",
-    "    \"\"\"\n",
-    "    import json\n",
-    "    with open(file_path, 'r') as file:\n",
-    "        return json.load(file)\n",
-    "    \n",
     "code_editor = dmc.CodeEditor(\n",
     "        id='code-editor',\n",
     "        value='import pandas as pd\\n\\ndf = pd.DataFrame()\\ndf.head()',\n",
-    "        moduleDefinitions=load_module_definitions_from_file('autocomplete.json')\n",
+    "        moduleDefinitions=module_definitions\n",
     "    )\n",
     "\n",
     "button_code_editor = dmc.Button(\n",
